--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,10 @@
   "short_name": "GAG Checklist",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#733F27",
-  "theme_color": "#733F27",
+  "background_color": "#0000FF",
+  "theme_color": "#0000FF",
   "description": "A checklist for all the seeds in the game.",
+  "version": "alpha-2025.08.27
   "icons": [
     {
       "src": "icon-192.png",
