--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "background_color": "#0000FF",
   "theme_color": "#0000FF",
   "description": "A checklist for all the seeds in the game.",
-  "version": "alpha-2025.08.27
+  "version": "alpha-2025.08.27",
   "icons": [
     {
       "src": "icon-192.png",
