--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "version": "alpha-2025.08.27",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#0000FF",
-  "theme_color": "#0000FF",
+  "background_color": "#42AAF5",
+  "theme_color": "#42AAF5",
   "description": "A checklist for all the seeds in the game.",
   "icons": [
     {
